--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/utilities.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
     <header>
       <nav id="main-nav" class="navbar">
@@ -29,7 +30,7 @@
           <li><a href="">Register</a></li>
         </ul>
         <div class="navbar_between">
-          <div class="navbar_input ">
+          <div class="navbar_input">
             <img class="navbar_input-search" src="./image/Vector.svg" alt="" />
             <input type="text" />
             <img src="./image/icon_close.svg" alt="" />
@@ -348,13 +349,25 @@
                 </div>
                 <div class="right_top-show">
                   <div class="right_top-show-item">
-                    <a  href="#" class="tab btn btn_default" onclick="changeProductList('',this)">
+                    <a
+                      href="#"
+                      class="tab btn btn_default"
+                      onclick="changeProductList('',this)"
+                    >
                       <h3 class="links_name">Show all</h3>
                     </a>
-                    <a  href="#" class=" tab btn btn_grey" onclick="changeProductList('Vintage',this)">
+                    <a
+                      href="#"
+                      class="tab btn btn_grey"
+                      onclick="changeProductList('Vintage',this)"
+                    >
                       <h3 class="links_name">Auction</h3>
                     </a>
-                    <a href="#" class=" tab  btn btn_grey" onclick="changeProductList('Premium',this)">
+                    <a
+                      href="#"
+                      class="tab btn btn_grey"
+                      onclick="changeProductList('Premium',this)"
+                    >
                       <h3 class="links_name">Buy now</h3>
                     </a>
                   </div>
@@ -378,9 +391,7 @@
                 <span class="text_related">vintage typewriter</span>
               </div>
             </div>
-            <div class="container_products">
-             
-            </div>
+            <div class="container_products"></div>
           </div>
           <div class="container_right-bottom">
             <div class="bottom_item">
